--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="author" content="Sebastian Ramirez">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Portfolio, Web Developer, Projects, Skills, Contact">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -28,7 +29,7 @@
             <!-- Header & Navbar -->
             <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 nopadding">
                 <header>
-                    <img src="img/logo.png" alt="Logo" class="logo" style="max-height: 100px; width: auto;">
+                    <img src="img/logo.jpg" alt="Logo" class="logo" style="max-height: 100px; width: auto;">
                 </header>
             </div>
 
@@ -39,8 +40,8 @@
                     <div id="menu">
                         <ol>
                             <li><a href="#about">About Me</a></li>
-                            <li><a href="#projects">Projects</a></li>
                             <li><a href="#skills">Skills</a></li>
+                            <li><a href="#projects">Projects</a></li>
                             <li><a href="#contact">Contact</a></li>
                         </ol>
                     </div>
@@ -110,7 +111,7 @@
 
         <!-- Projects Section -->
         <section id="projects" class="text-center">
-            <h2>Projects</h2>
+            <h2 style="color: white;">Projects</h2>
             <div class="row justify-content-center">
                 <article class="col-lg-8 col-md-10 col-sm-12 d-flex align-items-center mb-4">
                     <img src="img/projects/pitch-prediction.png" alt="Pitch Prediction Project" class="img-fluid me-3"
