Improve website design

--- a/src/index.html
+++ b/src/index.html
@@ -54,5 +54,36 @@
 
 <body>
   <app-root></app-root>
+  <script>
+    // Light/Dark mode toggle logic
+    function setDarkMode(enabled) {
+      if (enabled) {
+        document.documentElement.classList.add('dark');
+        localStorage.setItem('theme', 'dark');
+      } else {
+        document.documentElement.classList.remove('dark');
+        localStorage.setItem('theme', 'light');
+      }
+    }
+    // On load, set theme from localStorage or system preference
+    (function() {
+      const saved = localStorage.getItem('theme');
+      if (saved === 'dark' || (!saved && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+        setDarkMode(true);
+      } else {
+        setDarkMode(false);
+      }
+    })();
+    // Listen for toggle button clicks
+    document.addEventListener('DOMContentLoaded', function() {
+      function toggle() {
+        setDarkMode(!document.documentElement.classList.contains('dark'));
+      }
+      const desktopBtn = document.getElementById('darkModeToggleDesktop');
+      const mobileBtn = document.getElementById('darkModeToggleMobile');
+      if (desktopBtn) desktopBtn.addEventListener('click', toggle);
+      if (mobileBtn) mobileBtn.addEventListener('click', toggle);
+    });
+  </script>
 </body>
 </html>
