--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Portfolio website showcasing the work, skills, and projects of Sebastian Ramirez. Built with HTML, Tailwind CSS, and JavaScript.">
   <meta name="author" content="Sebastian Ramirez">
   <meta name="keywords" content="Portfolio, Web Developer, Projects, Skills, Contact, HTML, Tailwind CSS, JavaScript, Sebastian Ramirez">
-  
+  <base href="/" />
 
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
